visual overhaul, restylized nav bar

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -115,17 +115,19 @@ pre
 .wrapper-normal,
 .wrapper-large
 	height: 100%
-	width: 96%
-	margin: 0 auto
+	width: 100%
+	margin: 0 0 0 0
 
 	@media #{$mobile}
-		width: 88%
+		width: 100%
 
 	@media #{$tablet}
-		width: 88%
+		width: 100%
 
-.wrapper-normal
-	max-width: 560px
+.half
+	width: 50%
+	margin: auto
+
 
 .wrapper-large
 	max-width: 810px
