--- a/_sass/base/helpers.sass
+++ b/_sass/base/helpers.sass
@@ -5,6 +5,9 @@
 .text-center
 	text-align: center
 
+.text-right
+	text-align: right
+
 .clearfix:before,
 .clearfix:after
 	content: ""
@@ -21,6 +24,19 @@
 	animation: fade-in-down 0.6s
 	animation-delay: 0.3s
 	animation-fill-mode: both
+
+.color1
+	background: #3d5a80
+
+.color2
+	background: #e0fbfc
+
+
+.half
+	display: block
+	width: 50%
+	text-align: left
+
 
 @keyframes fade-in-down
 	0%
