--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -1,17 +1,19 @@
-.header-home
+.header, .header-home
     display: block
+    width: 50%
     margin: 0 auto
     text-align: center
     position: relative
     z-index: 99
 
     > .link > .selfie
-        width: 125px
-        height: 125px
-        margin-bottom: 25px
+        width: 150px
+        height: 150px
+        margin: -90px 0 15px
         border-radius: 100%
         transition: all .2s
         opacity: 1
+        color: #98c1d9
 
         &:hover
             box-shadow: 0 0px 4px 0 rgba(0,0,0,0.18), 0 0px 12px 0 rgba(0,0,0,0.15)
