--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -1,46 +1,25 @@
 .nav,
 .nav-home
+    
+    border-bottom: 2px solid #e6e9eb    
+    padding: 50px 0
     > .list
-        list-style: none
-        margin: 0
-        padding: 0 13px 0
-
+        padding: 0 0 0 0
+        margin: 0 0 0 0
+        
         > .item
-            display: inline-block
+            display: inline
 
         > .item > .link
-            display: inline-block
-            font-weight: 300
-            font-size: 1.4rem
-            padding: 20px 10px
-            text-decoration: none
-
-.nav
-    position: absolute
-    right: 0
-    top: 0
-
-    > .list
-        padding: 0 13px 0
-
-        > .item > .link
-            font-size: 1.4rem
-            padding: 20px 10px
-
-.nav-home
-    margin-top: 40px
-    text-align: center
-
-    > .list
-        padding: 0
-
-        > .item > .link
+            display: inline
+            font-weight: 500
             font-size: 2rem
-            padding: 7px 15px
-            margin: 0
-            border-radius: 4%
-            transition: all .4s ease-in-out
-            width: 70px
+            padding: 20px 30px
+            text-decoration: none
+            color: #e0fbfc
 
             &:hover
                 color: $alpha
+                background: #839FC3
+
+
