--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,7 @@
                 </li>
                 
                 <li class="item">
-                    <a class="link" href="./resume.pdf" target="_blank">Résumé</a>
+                    <a class="link" href="./resume.pdf" target="_blank">Resume</a>
                 </li>
             </ul>
         </nav>
