--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,24 +1,28 @@
 
-<div class="color1">
-    <div class="text-right">
-        <nav class="{% if page.title == "Home" %}nav-home{% else %}nav{% endif %}">
-            <ul class="list"> 
-                <li class="item">
-                    <a class="link" href="{{ site.url }}/">Home</a>
-                </li>
-               
-                <li class="item">
-                    <a class="link" href="{{ site.url }}/blog">Blog</a>
-                </li>
-                
-                <li class="item">
-                    <a class="link" href="{{ site.url }}/note">Notes</a>
-                </li>
-                
-                <li class="item">
-                    <a class="link" href="./resume.pdf" target="_blank">Resume</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+<div class="color1">  
+    <nav class="nav">
+
+        <a class="name" href="/#">Adam Young</a>
+
+        <ul class="list"> 
+            <li class="item">
+                <a class="link" href="{{ site.url }}/">Home</a>
+            </li>
+           
+            <li class="item">
+                <a class="link" href="{{ site.url }}/blog">Blog</a>
+            </li>
+            
+            <li class="item">
+                <a class="link" href="{{ site.url }}/notes">Notes</a>
+            </li>
+            
+            <li class="item">
+                <a class="link" href="./resume.pdf" target="_blank">Resume</a>
+            </li>
+        </ul>
+
+    </nav>
 </div>
+
+<hr>
