--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -1,25 +1,42 @@
-.nav,
-.nav-home
-    
-    border-bottom: 2px solid #e6e9eb    
-    padding: 50px 0
-    > .list
+.nav
+    width: 80%    
+    padding: 3em 0
+    .name
+        display: inline
+        padding: 0 0 0 0
+        margin: 0 0 0 0
+        color: #FFFFFF
+        font-weight: 1000
+        font-size: 1.3em
+        padding: 1.3em 1.3em
+        text-decoration: none
+
+
+    .list
+        display: inline
+        position: absolute
+        right: 0
         padding: 0 0 0 0
         margin: 0 0 0 0
         
-        > .item
+        .item
             display: inline
 
-        > .item > .link
-            display: inline
-            font-weight: 500
-            font-size: 2rem
-            padding: 20px 30px
-            text-decoration: none
-            color: #e0fbfc
+        .item 
+            .link
+                display: inline
+                font-weight: 800
+                font-size: 1.3em
+                padding: 1em 1.3em
+                text-decoration: none
+                color: #FFFFFF
 
-            &:hover
-                color: $alpha
-                background: #839FC3
+                &:hover
+                    color: $alpha
+                    background: #839FC3
+
+
+
+
 
 
