--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -26,9 +26,7 @@ h3
 h4
 	font-size: 1.6rem
 
-a
-	color: $delta
-	text-decoration: underline
+
 
 p
 	line-height: 1.7
@@ -81,9 +79,9 @@ blockquote
 
 hr
 	border: none
-	height: 1px
-	margin: 40px auto
-	background: #eee
+	height: .2em
+	margin: 0 0 0 0 
+	background: #313d48
 	width: 100%
 
 figure.highlight
