--- a/_sass/base/helpers.sass
+++ b/_sass/base/helpers.sass
@@ -8,6 +8,9 @@
 .text-right
 	text-align: right
 
+.text-left
+	text-align: left
+
 .clearfix:before,
 .clearfix:after
 	content: ""
@@ -34,7 +37,7 @@
 
 .half
 	display: block
-	width: 50%
+	width: 41%
 	text-align: left
 
 
