--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -4,6 +4,7 @@
 @import "base/syntax";
 @import "base/general";
 @import "base/helpers";
+@import "base/fonts";
 
 @import "pages/home-blog-projects";
 @import "pages/page";
